--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,12 @@
 	"support": {
 		"issues": "https://github.com/axllent/silverstripe-trailing-slash/issues"
 	},
-	"require": {
-		"silverstripe/framework": "3.*"
-	}
+    "require": {
+		"silverstripe/framework": "^4.0@dev"
+	},
+    "autoload": {
+        "psr-4": {
+            "Axllent\\TrailingSlash\\": "src/"
+        }
+    }
 }
