--- a/_config/extension.yml
+++ b/_config/extension.yml
@@ -1,3 +1,3 @@
-ContentController:
+SilverStripe\CMS\Controllers\ContentController:
   extensions:
-    - TrailingSlashExt
+    - Axllent\TrailingSlash\Control\SlashRedirector
