--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "axllent/silverstripe-trailing-slash",
 	"description": "Ensure that a single trailing slash is always added to the URL",
-	"type": "silverstripe-module",
+	"type": "silverstripe-vendormodule",
 	"homepage": "https://github.com/axllent/silverstripe-trailing-slash",
 	"keywords": ["silverstripe", "urls", "seo"],
 	"license": "The MIT License (MIT)",
@@ -15,7 +15,7 @@
 		"issues": "https://github.com/axllent/silverstripe-trailing-slash/issues"
 	},
     "require": {
-		"silverstripe/framework": "^4.0@dev"
+		"silverstripe/framework": "^4.0"
 	},
     "autoload": {
         "psr-4": {
