--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "issues": "https://github.com/axllent/silverstripe-trailing-slash/issues"
     },
     "require": {
-        "silverstripe/framework": "^4.0 || ^5.0"
+        "silverstripe/framework": "^4.0 || ^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
